LIST OF CHANGES
---------------

release 59.2.0
 - iRODS connections to be opened on-demand for validation
 - Added an option of having a new boolean flag 'accept_undef_qc_outcome'
   in the study configuration for a product for a particular archiver.
   If this flag is set to a true value, the return value of the
   has_qc_for_release method might return true in cases where previously
   it would have returned false. This is done in order to allow for
   archival of products which either passes QC or have never been through
   manual or robo QC. The data retention policy implementation is changed
   to take into account the new flag.
 - npg_majora_for_mlwh - dry_run option goes further in the processes,
   but avoids writes/updates
 - Use GitHub actions for CI in place of Travsi-CI
 - Unused JSON files for function graphs are removed.
 - Per-study product configuration file product_release.yml, which is used
   when creating jobs, is copied to the analysis directory to preserve
   run conditions
 - CI: replace Travsi-CI with GitHub Actions

release 59.1.0
 - More options for defining wr limit groups: allow an exact match
   to the last component of pipeline function class name.
 - An additional wr limit group - s3 - is configured.
 - The wait4path pipeline job does not have a log. To enable wr to
   recognise that these jobs are unique, echoing a random string
   is added to the shell command.
 - Remove the limit on the number of NovaSeq runs being archived at
   the same time. Introduce a limit on the number of runs,
   irrespectively of the instrument type, which are moved to archival
   within the last hour.
 - Include pipeline version and name when sending sequencing run metadata
   to the majora service.


release 59.0.0
 - Following a decision to send data to CLIMB regardless of artic
   QC status, the file glob of the data to upload is changed to
   locations where both passed and failed data are available.