@@ -260,6 +260,7 @@ t/data/miseq/samplesheet_16866.csv
 t/data/miseq/samplesheet_20990.csv
 t/data/miseq/samplesheet_24135.csv
 t/data/miseq/samplesheet_24135_bwa_mem2.csv
+t/data/miseq/samplesheet_24135_gbs.csv
 t/data/miseq/samplesheet_24135_V2.csv
 t/data/no_reads.cram
 t/data/novaseq/180709_A00538_0010_BH3FCMDRXX/Data/Intensities/BAM_basecalls_20180805-013153/metadata_cache_26291/samplesheet_26291.csv
