@@ -1,23 +1,35 @@
 ---
 default:
   markdup_method: "biobambam"
-
+  gbs_pipeline: &gbs_pipeline_accessible
+    allowed: true
 study:
   - study_id: "3573"
     markdup_method: "samtools"
+    gbs_pipeline: *gbs_pipeline_accessible
   - study_id: "3710"
     markdup_method: "samtools"
+    gbs_pipeline: *gbs_pipeline_accessible
   - study_id: "4416"
     markdup_method: "picard"
+    gbs_pipeline: *gbs_pipeline_accessible
   - study_id: "4825"
     markdup_method: "samtools"
+    gbs_pipeline: *gbs_pipeline_accessible
   - study_id: "3188"
     markdup_method: "samtools"
+    gbs_pipeline: *gbs_pipeline_accessible
   - study_id: "2846"
     markdup_method: "samtools"
+    gbs_pipeline: *gbs_pipeline_accessible
   - study_id: "3081"
     markdup_method: "samtools"
+    gbs_pipeline: *gbs_pipeline_accessible
   - study_id: "3948"
     markdup_method: "biobambam"
+    gbs_pipeline: *gbs_pipeline_accessible
   - study_id: "3597"
     markdup_method: "samtools"
+    gbs_pipeline: &gbs_pipeline_inaccessible
+      allowed: false
+
